<resources>
    <string name="app_name">inheal</string>
    <string name="running_illustration">Running Illustration</string>
    <string name="run_tracker">RunTracker</string>
    <string name="yuk_mulai_lari">Yuk mulai lari!</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="masuk">Masuk</string>
    <string name="halo_zap">Halo, Zap!</string>
    <string name="apa_kabarmu_hari_ini">Apa kabarmu hari ini?</string>
    <string name="area_peta_statistik_lari">Area Peta / Statistik Lari</string>
    <string name="mulai_lari">Mulai Lari</string>

    <!-- Register Strings -->
    <string name="halo_wave">👋 Halo!</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="ayo_mulai_lari_bareng">Ayo mulai lari bareng kita🏃🏻‍♂️‍➡️ </string>
    <string name="nama_label">NAMA</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="email_label">EMAIL</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="password_label">PASSWORD</string>
    <string name="min_6_karakter">Min. 6 karakter</string>
    <string name="sign_up">Sign Up</string>
    <string name="udah_punya_akun_login_aja">Udah punya akun? Login aja</string>

    <!-- Profile Fragment Strings -->
    <string name="profile_picture">Profile Picture</string>
    <string name="default_user_name">Nama User</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>

    <!-- Login Fragment Strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password too short</string>
    <string name="welcome">Welcome ! </string>

    <!-- Catat Lari Fragment Strings -->
    <string name="let_s_share_nyour_journey">Let\'s share\nyour journey</string>
    <string name="tanggal">Tanggal</string>
    <string name="jarak_lari">Jarak Lari</string>
    <string name="durasi">Durasi</string>
    <string name="save_journey">Save Journey</string>
</resources>